
<package format="3">
  <name>campus_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>campus_navigation_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>networkx</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>campus_navigation_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
